trying to implement data page and improved tracker page (both not yet fully working)

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -23,6 +23,13 @@
             <span class="tooltip">Data Tracker</span>
         </li>
         <li>
+            <a href="/data">
+                <i class="bx bx-table"></i>
+                <span class="nav-item">Data Log</span>
+            </a>
+            <span class="tooltip">Data Log</span>
+        </li>
+        <li>
             <a href="/profile">
                 <i class="bx bxs-user"></i>
                 <span class="nav-item">Profile</span>
