--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -22,6 +22,13 @@
             </a>
             <span class="tooltip">Data Tracker</span>
         </li>
+        <li>
+            <a href="/data">
+                <i class="bx bx-table"></i>
+                <span class="nav-item">Data Log</span>
+            </a>
+            <span class="tooltip">Data Log</span>
+        </li>
         <li class="active">
             <a href="/profile">
                 <i class="bx bxs-user"></i>
