--- a/public/style.css
+++ b/public/style.css
@@ -717,3 +717,47 @@ select#age:focus, select#reason-hiv:focus, select#vulnerable-population:focus, s
 .error {
     text-align: center;
 }
+
+/** DATA PAGE **/
+.container-for-data {
+    background-color: #FFECF0;
+    border: 2px solid black;
+    padding: 20px;
+    margin: 20px 0;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow-x: auto; /* Enable horizontal scroll if needed */
+}
+
+.data-log {
+    width: 100%;
+    border-collapse: collapse;
+    white-space: nowrap; /* Prevent text wrapping */
+}
+
+.data-log th,
+.data-log td {
+    padding: 12px 15px;
+    text-align: left;
+    border: 1px solid #ddd;
+}
+
+.data-log th {
+    background-color: #9B112E;
+    color: #E2FFED;
+    font-weight: bold;
+}
+
+.btn-edit,
+.btn-delete {
+    display: inline-block;
+    padding: 6px 10px;
+    font-size: 14px;
+    cursor: pointer;
+    text-decoration: none;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    background-color: #007BFF;
+    margin-right: 5px;
+}
